--- a/test/fixtures/roles.yml
+++ b/test/fixtures/roles.yml
@@ -4,3 +4,11 @@ admin_role:
 user_role:
   id: 2
   name: user
+
+# == Schema Info
+# Schema version: 20080929171348
+#
+# Table name: roles
+#
+#  id   :integer(4)      not null, primary key
+#  name :string(255)
