--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,3 +6,24 @@ admin:
   crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
   # activation_code: adminscode # only if you're activating new signups
   created_at: <%= 1.days.ago.to_s :db %>
+
+# == Schema Info
+# Schema version: 20080929171348
+#
+# Table name: users
+#
+#  id                        :integer(4)      not null, primary key
+#  activation_code           :string(40)
+#  crypted_password          :string(40)
+#  email                     :string(100)
+#  identity_url              :string(255)
+#  login                     :string(40)
+#  name                      :string(100)     default("")
+#  remember_token            :string(40)
+#  salt                      :string(40)
+#  state                     :string(255)     not null, default("passive")
+#  activated_at              :datetime
+#  created_at                :datetime
+#  deleted_at                :datetime
+#  remember_token_expires_at :datetime
+#  updated_at                :datetime
